.vscode/allianceuat_compare/force-app/main/default/objects/Ahpra_Integration_Settings__c/Ahpra_Integration_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Ahpra Integration Settings</label>
</CustomObject>