.vscode/allianceuat_compare/force-app/main/default/objects/Ahpra_Integration_Settings__c/fields/Ahpra_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Ahpra_Endpoint__c</fullName>
    <label>Ahpra Endpoint</label>
    <type>Url</type>
</CustomField>