.vscode/allianceuat_compare/force-app/main/default/objects/Ahpra_Integration_Settings__c/fields/Ahpra_Password__c.field-meta.xml
<CustomField>
    <fullName>Ahpra_Password__c</fullName>
    <label>Ahpra Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>