.vscode/allianceuat_compare/force-app/main/default/objects/Ahpra_Integration_Settings__c/fields/Ahpra_Username__c.field-meta.xml
<CustomField>
    <fullName>Ahpra_Username__c</fullName>
    <label>Ahpra Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>